fix(Seller): fixing api docs
